# os-heat-agent

./: .gitignore  README.md  Vagrantfile  justfile  pyproject.toml
.github/workflows/: PyPI-release.yml  build-wheel.yml  gh-release.yml  release.yml  tagged_release.yml
docs/: Deployments.md
examples/environments/terraform/: justfile  main.tf  output.tf  variables.tf
examples/environments/terraform/yaml/: software_config.yaml
examples/software_config/: README.md  main.tf  variables.tf
examples/software_config/yaml/: software_config.yaml  software_config_advanced.yaml  structured_config.yaml
src/os_heat_agent/: __init__.py  config.py  deployments.py  errors.py  heat.py  version.py
src/os_heat_agent/runners/: __init__.py  babashka.py  legacy.py  shell.py
tests/: conftest.py
tests/deployments/: test_deployer.py
tests/deployments/SoftwareConfig/: test_shell.py  test_validation.py
tests/deployments/StructuredConfig/: test_babashka.py  test_shell.py  test_validation.py
tests/fixtures/babashka/config/: deployment_test.sh  input_run.sh  inputless_run.sh
tests/fixtures/openstack/StackComponent/babashka/: bad_response.json  good_create_response.json
tests/fixtures/openstack/metadata/: good_meta_data.json
tests/fixtures/openstack/software_config/: cfn-init-data  os-cfn-current-missing-options.json
tests/fixtures/openstack/software_config/shell/: legacy_serialized.json  nonserialized.json  serialized.json
tests/fixtures/openstack/structured_config/: os-cfn-current-bad-deployer.json  os-cfn-current-good.json  os-cfn-current-missing-config.json  os-cfn-current-missing-outputs.json
tests/fixtures/openstack/structured_config/babashka/: test_babashka_deployer.json
tests/fixtures/openstack/structured_config/shell/: test_non_serialize.json  test_serialize.json
tests/fixtures/runtime/: good.ini  missing_cache.ini
tests/io/: README.md  test_get_region.py  test_main.py  test_responses.py
tests/runners/babashka/: test_bashifier.py  test_pre.py  test_run.py  test_validation.py
tests/runners/shell/: test_run.py  test_shell.py
vagrant/files/var/lib/heat-cfntools/: cfn-init-data
vagrant/scripts/: 00-norecommends.sh  01-init.sh  02-python.sh
