[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "os_heat_agent"
version = "0.0.1"
authors = [
  { name="Aurynn Shaw", email="aurynn@eiara.nz" },
]
description = "A small configurable agent for interacting with OpenStack Heat software configuration."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    # "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
os_heat_agent = "os_heat_agent:main"

[project.urls]
"Homepage" = "https://github.com/eiara/os-heat-agent"
"Bug Tracker" = "https://github.com/eiara/os-heat-agent/issues"

[tool.hatch.envs.default]
platforms = ["linux", "macos"]
dependencies = [
  "boto3",
  "requests",
  "click",
  # "schema"
]